--- a/bsc_contracts/package.json
+++ b/bsc_contracts/package.json
@@ -7,6 +7,7 @@
     "test": "test"
   },
   "dependencies": {
+    "@openzeppelin/contracts": "^4.1.0",
     "chai": "^4.3.4"
   },
   "devDependencies": {
