--- a/bsc_contracts/package.json
+++ b/bsc_contracts/package.json
@@ -8,14 +8,16 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.1.0",
-    "chai": "^4.3.4"
+    "chai": "^4.3.4",
+    "solidity-bytes-utils": "^0.8.0"
   },
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.2",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.3.1",
-    "hardhat": "^2.4.0"
+    "hardhat": "^2.4.0",
+    "hardhat-gas-reporter": "^1.0.4"
   },
   "scripts": {
     "test": "mocha"
