--- a/bsc_contracts/package.json
+++ b/bsc_contracts/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@openzeppelin/contracts": "^4.1.0",
     "chai": "^4.3.4",
+    "solc": "^0.7.3",
     "solidity-bytes-utils": "^0.8.0"
   },
   "devDependencies": {
